# MetaOSC

./: .gitignore  .gitmodules  CMakeLists.txt  README 2.md  README.md  config.json
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
src/: BleInterface.h  Main.cpp  MetaMotionController.cpp  MetaMotionController.h
